2011-12-13  Kaz Kylheku  <kaz@kylheku.com>

	Patch to shrink mpi-int to three words on 32 bit platforms,
	so that obj_t stays four pointers wide.

	* mpi-patches/series: New patch added.

	* mpi-patches/shrink-mpi-int: New file.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/bit-search-optimizations (s_highest_bit): Added static
	storage class specifier.

	* mpi-patches/fix-mult-bug (s_mp_sqr): More braindamage found in MPI.
	This function performs additions and multiplication mp_digit,
	expecting a mp_word precision result without casting. This function
	is needed for exponentiation.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	Git rid of some some loops in MPI where it is searching for
	the highest bit, replacing them with an adapation of the
	bit searching function used in arith.c.

	* mpi-patches/series: Patch added.

	* mpi-patches/bit-search-optimizations: New file.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (expt): New function.

	* eval.c (eval_init): Registering new intrinsic functions,
	reduce-left, reduce-right and expt.

	* lib.c (minusv): Return one instead of num(1).
	(exptv, reduce_right): New functions.

	* lib.h (expt, exptv, reduce_right): Declared.

	* txr.1: Blank sections for new functions.

2011-12-12  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/fix-mult-bug: One more flaw discovered in
	s_mp_mul_d and added to patch. This one caused malloc corruption and
	crashes, because the incorrect arithmetic causes the function
	to think that the multiplication will not be needing another
	digit, but then there is a carry out which does spill into
	a new digit.

	* mpi-patches/series: Arg! Somehow the patch fix-bad-shift
	went missing from the series file, even though the patch
	itself is in the GIT repository.

2011-12-06  Kaz Kylheku  <kaz@kylheku.com>

	Version 047

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.
