@@ -1,5 +1,10 @@
 2011-12-13  Kaz Kylheku  <kaz@kylheku.com>
 
+	* Makefile (repatch): New phony target.
+	(distclean): Remove mpi directory.
+
+2011-12-13  Kaz Kylheku  <kaz@kylheku.com>
+
 	Patch to shrink mpi-int to three words on 32 bit platforms,
 	so that obj_t stays four pointers wide.
 
